# mlops-workflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: checks-workflow.yml  pre-commit.yml
src/: __init__.py  app.py  app_utils.py  main.py  my_first_app.py  utils.py
tests/: test_main.py  test_utils.py
